ui/main.css
/* ... */
.memberbar .memberdesc::selection, .memberbar .membername::selection, .memberbar .avatar::selection, .memberbar .member::selection, .memberbar::selection {
    background: none;
}

.mainbox .messagebox {
    display: inline-block;
    position: fixed;
    left: 312px;
    top: 48px;
    bottom: 0;
    right: 240px;
}

.messagebox .fileupload {
    width: 40px;
    height: 35px;
    position: absolute;
    bottom: 20px;
    background-color: rgb(64, 68, 75);
    margin-left: 15px;
    border: none;
    border-right: 2px solid rgb(54, 57, 63);
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
    z-index: 1;
    outline: none;
}

.fileupload .fa-plus-circle {
    color: rgb(171, 171, 171);
    font-size: 20px;
    width: 20px;
    height: 20px;
    margin-left: 2px;
}

.messagebox .fileupload:hover > .fa-plus-circle {
    color: rgb(255, 255, 255)
}

.messagebox .messageinput {
    width: calc(100% - 70px);
    height: 35px;
    border-radius: 4px;
    position: absolute;
    bottom: 20px;
    box-sizing : border-box;
    margin-left: 15px;
    margin-right: 55px;
    border: none;
    padding: 7px;
    padding-left: 50px;
    padding-right: 10px;
    color: rgb(255, 255, 255);
    background-color: rgb(64, 68, 75);
    resize: none;
    font-family: inherit;
    font-size: inherit;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.messagebox .emojiselect {
    width: 40px;
    height: 35px;
    background-color: rgb(64, 68, 75);
    position: absolute;
    bottom: 20px;
    border: none;
    margin-left: calc(100% - 55px);
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
    outline: none;
}

.emojiselect .fa-grin {
    color: rgb(171, 171, 171);
    font-size: 20px;
    width: 20px;
    height: 20px;
    margin-left: 2px;
}

.messagebox .emojiselect:hover > .fa-grin {
    color: rgb(255, 255, 255)
}

.messagebox .inputborder {
    width: calc(100% - 30px);
    position: absolute;
    bottom: 75px;
    height: 0;
    border-bottom: 1px solid rgb(66, 69, 74);
    margin-left: 15px;
}

.messagebox .messageinput::placeholder {
    color: rgb(106, 110, 116);
}

.messagebox .messageinput:focus {
    outline: none;
}

.messagebox .messages {
    height: calc(100% - 75px);
    width: calc(100% - 15px);
    margin-left: 15px;
    display: flex;
    flex-direction: column-reverse;
    overflow-y: scroll;
    overflow-x: scroll;
}

.messages .message {
    border-top: 1px solid rgb(66, 69, 74);
    width: calc(100% - 15px);
    margin-right: 15px;
}

.message .msgavatar {
    border-radius: 100%;
    width: 40px;
    height: 40px;
    margin-top: 30px;
    display: inline-block;
    pointer-events: none;
}

.message .msguser {
    display: inline-block;
    font-weight: 500;
    font-size: 14px;
    white-space: nowrap;
    padding: 0;
    transform: translateY(-22px);
    margin-left: 15px;
    cursor: pointer;
}

.message .msguser:hover {
    text-decoration: underline;
}

.message .msgtime {
    display: inline-block;
    font-weight: 400;
    font-size: 11px;
    white-space: nowrap;
    padding: 0;
    transform: translateY(-22px);
    margin-left: 6px;
    color: rgb(94, 97, 104);
}

.message .msgbody {
    display: inline-block;
    width: calc(100% - 65px);
    margin-left: 58px;
    transform: translateY(-32px);
    font-size: 12px;
    font-weight: 300;
    white-space: normal;
    overflow-wrap: break-word;
}

.msgbody .customemoji {
    width: 25px;
    height: 25px;
    display: inline-block;
    transform: translateY(4px);
}

.msgbody .mention {
    background-color: rgb(61, 65, 79);
    color: rgb(114, 137, 218);
    white-space: nowrap;
    padding: 0;
    margin: 0;
    width: auto;
    display: inline-block;
    cursor: pointer;
}

.msgbody .mention:hover {
    background-color: rgb(96, 113, 172);
    color: rgb(255, 255, 255);
}

.msgbody .selfmention {
    color: rgb(114, 137, 218);
    white-space: nowrap;
    padding: 0;
    margin: 0;
    width: auto;
    display: inline-block;
    cursor: pointer;
}

.msgbody.selfmention {
    background-color: rgb(75, 68, 59);
    border-left: 4px solid rgb(250, 166, 26);
    border-radius: 3px 0 0 3px;
    padding-left: 3px;
}

.msgbody .selfmention:hover {
    text-decoration: underline;
}

.msgbody .quoteblock {
    display: inline-block;
    height: 16px;
    width: 0;
    border-left: 3px solid;
    border-color: rgb(81, 84, 93);
    transform: translateY(5px);
    margin-right: 4px;
}

.msgbody code {
    font-family: inherit;
    border-radius: 5px;
}

.msgbody pre {
    font-family: inherit;
    word-wrap: break-word;
    white-space: normal;
}

.msgbody .link {
    color: rgb(13, 146, 198);
    padding: 0;
    margin: 0;
    width: auto;
    display: inline-block;
    cursor: pointer;
}

.msgbody .link:hover {
    text-decoration: underline;
}

.message .imageattachment {
    width: calc(100% - 65px);
    margin-left: 58px;
    transform: translateY(-32px);
    overflow: hidden;
}

.imageattachment img {
    height: auto;
    width: auto;
    max-height: 250px;
    max-width: 100%;
    min-width: 250px;
    cursor: pointer;
}

.message .attachment {
    padding: 10px;
    max-width: 520px;
    width: calc(100% - 75px);
    transform: translateY(-32px);
    margin-left: 58px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    background-color: rgb(52, 54, 60);
    border-radius: 5px;
}

.attachment .fa-file-alt {
    font-size: 28px;
    height: 28px;
    width: 28px;
    margin-right: 8px;
    display: inline-block;
}

.attachment .fa-download {
    font-size: 20px;
    height: 20px;
    width: 20px;
    margin-top: 5px;
    float: right;
    cursor: pointer;
}

.attachment p {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    font-size: 12px;
    color: rgb(23, 120, 160);
    display: inline-block;
    margin: 0;
    margin-bottom: 5px;
    width: calc(100% - 60px);
    cursor: pointer;
}
/* ... */

